[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Transition/Transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://UI/AnimatedButton/AnimatedButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Office/OfficeTileset.tres" type="TileSet" id=4]
[ext_resource path="res://World/End/ParkTileset.tres" type="TileSet" id=5]
[ext_resource path="res://Player/Assets/Yohe/Player.png" type="Texture" id=6]
[ext_resource path="res://Player/Assets/Ale/Player.png" type="Texture" id=7]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Objects/DialogArea/DialogArea.tscn" type="PackedScene" id=12]
[ext_resource path="res://Music/2021-08-16_-_8_Bit_Adventure_-_www.FesliyanStudios.com.mp3" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=12]
size = 72
outline_size = 1
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "Wobble"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.631373, 0.956863, 1, 1 )

[node name="Load" type="Timer" parent="."]
one_shot = true

[node name="Sky" type="TileMap" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -262153, 6, 0, -262152, 6, 0, -262151, 6, 0, -262150, 6, 0, -262149, 6, 0, -262148, 6, 0, -262147, 6, 0, -262146, 6, 0, -262145, 6, 0, -327680, 6, 0, -327679, 6, 0, -327678, 6, 0, -327677, 6, 0, -327676, 6, 0, -327675, 6, 0, -327674, 6, 0, -327673, 6, 0, -327672, 6, 0, -196617, 6, 0, -196616, 6, 0, -196615, 6, 0, -196614, 6, 0, -196613, 6, 0, -196612, 6, 0, -196611, 6, 0, -196610, 6, 0, -196609, 6, 0, -262144, 6, 0, -262143, 6, 0, -262142, 6, 0, -262141, 6, 0, -262140, 6, 0, -262139, 6, 0, -262138, 6, 0, -262137, 6, 0, -262136, 6, 0, -131081, 6, 0, -131080, 6, 0, -131079, 6, 0, -131078, 6, 0, -131077, 6, 0, -131076, 6, 0, -131075, 6, 0, -131074, 6, 0, -131073, 6, 0, -196608, 6, 0, -196607, 6, 0, -196606, 6, 0, -196605, 6, 0, -196604, 6, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 6, 0, -65545, 6, 0, -65544, 6, 0, -65543, 6, 0, -65542, 6, 0, -65541, 6, 0, -65540, 6, 0, -65539, 6, 0, -65538, 6, 0, -65537, 6, 0, -131072, 6, 0, -131071, 6, 0, -131070, 6, 0, -131069, 6, 0, -131068, 6, 0, -131067, 6, 0, -131066, 6, 0, -131065, 6, 0, -131064, 6, 0, -9, 6, 0, -8, 6, 0, -7, 6, 0, -6, 6, 0, -5, 6, 0, -4, 6, 0, -3, 6, 0, -2, 6, 0, -1, 6, 0, -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, 65527, 6, 0, 65528, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 131063, 6, 0, 131064, 6, 0, 131065, 6, 0, 131066, 6, 0, 131067, 6, 0, 131068, 6, 0, 131069, 6, 0, 131070, 6, 0, 131071, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 196599, 6, 0, 196600, 6, 0, 196601, 6, 0, 196602, 6, 0, 196603, 6, 0, 196604, 6, 0, 196605, 6, 0, 196606, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0 )

[node name="Stars" type="TileMap" parent="."]
position = Vector2( 512, 272 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -196613, 19, 0, -196612, 20, 0, -262139, 18, 0, -196606, 17, 0, -65544, 19, 0, -65543, 20, 0, -65540, 17, 0, -131066, 17, 0, -65534, 19, 0, -65533, 20, 0, 65533, 19, 0, 65534, 20, 0, 131065, 17, 0, 65543, 17, 0 )

[node name="Grass" type="TileMap" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 6, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="AleYYohe" type="Node2D" parent="."]
position = Vector2( 448, 400 )
scale = Vector2( 4, 4 )

[node name="Ale" type="AnimatedSprite" parent="AleYYohe"]
position = Vector2( 64, 4 )
frames = SubResource( 15 )
playing = true
centered = false
flip_h = true

[node name="Yohe" type="AnimatedSprite" parent="AleYYohe"]
position = Vector2( -48, 4 )
frames = SubResource( 16 )
playing = true
centered = false

[node name="Comenzar" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -280.0
margin_right = 93.0
margin_bottom = -216.0
text = "Comenzar"

[node name="VerInvitacion" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -200.0
margin_right = 133.0
margin_bottom = -136.0
focus_mode = 2
text = "Ver Invitacion"

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 32.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 512, 64 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.682353, 0, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Invitacion de boda
Yohe y Ale"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "Wobble"
anims/RESET = SubResource( 13 )
anims/Wobble = SubResource( 14 )

[node name="Transition" parent="." instance=ExtResource( 1 )]
visible = false
mouse_filter = 2
start_closed = true

[node name="DialogArea" parent="." instance=ExtResource( 12 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0
autoplay = true

[connection signal="timeout" from="Load" to="." method="_on_Load_timeout"]
[connection signal="button_down" from="Comenzar" to="." method="_on_Play_button_down"]
[connection signal="pressed" from="VerInvitacion" to="." method="_on_VerInvitacion_pressed"]
